--- a/GroupSubscriptions/App_LocalResources/SetGroupSubscriptionDate.aspx.resx
+++ b/GroupSubscriptions/App_LocalResources/SetGroupSubscriptionDate.aspx.resx
@@ -209,8 +209,8 @@
     </data>
     <data name="StartDate" xml:space="preserve">
         <value>Start Date</value>
-    </data> 
-  <data name="pnlSubscriptionProperties.Text">
-    <value xml:space="preserve">Properties</value>
-  </data>
+    </data>
+    <data name="pnlSubscriptionProperties.Text" xml:space="preserve">
+        <value>Properties</value>
+    </data>
 </root>
