CORE-7442 : Localization for incorrect old password text

--- a/App_LocalResources/ChangePassword.aspx.en-GB.resx
+++ b/App_LocalResources/ChangePassword.aspx.en-GB.resx
@@ -143,4 +143,7 @@
     <data name="TEXT_SU_NOTE" xml:space="preserve">
         <value>&lt;br /&gt;&lt;br /&gt;&lt;b&gt;NOTE:&lt;/b&gt;  As Super User, you will also have to change the entry in ServerAccess on each machine and encrypt it.</value>
     </data>
+    <data name="lblIncorrectPasswordResource1.Text" xml:space="preserve">
+        <value>Incorrect old password</value>
+    </data>        
 </root>
