--- a/App_LocalResources/ChangePassword.aspx.de.resx
+++ b/App_LocalResources/ChangePassword.aspx.de.resx
@@ -144,4 +144,7 @@
     <data name="TEXT_SU_NOTE" xml:space="preserve">
         <value>&amp;lt;br /&amp;gt;&amp;lt;br /&amp;gt;&amp;lt;b&amp;gt;HINWEIS:&amp;lt;/b&amp;gt; Als Superuser müssen Sie zudem den Eintrag in 'ServerAccess' auf jedem Rechner ändern und verschlüsseln.</value>
     </data>
+    <data name="lblIncorrectPasswordResource1.Text" xml:space="preserve">
+        <value>[de] Incorrect old password</value>
+    </data>        
 </root>
