--- a/App_LocalResources/ChangePassword.aspx.es-MX.resx
+++ b/App_LocalResources/ChangePassword.aspx.es-MX.resx
@@ -143,4 +143,7 @@
     <data name="TEXT_SU_NOTE" xml:space="preserve">
         <value>&lt;br /&gt;&lt;br /&gt;&lt;b&gt;NOTA:&lt;/b&gt; como superusuario, también tendrá que cambiar la entrada en ServerAccess en cada equipo y cifrarla.</value>
     </data>
+    <data name="lblIncorrectPasswordResource1.Text" xml:space="preserve">
+        <value>[es-mx] Incorrect old password</value>
+    </data>    
 </root>
