--- a/App_LocalResources/ChangePassword.aspx.fr.resx
+++ b/App_LocalResources/ChangePassword.aspx.fr.resx
@@ -143,4 +143,7 @@
     <data name="TEXT_SU_NOTE" xml:space="preserve">
         <value>&lt;br /&gt;&lt;br /&gt;&lt;b&gt;REMARQUE :&lt;/b&gt;  En tant que Super utilisateur, vous devrez également modifier l’entrée dans ServerAccess sur chaque machine et la crypter.</value>		
     </data>
+    <data name="lblIncorrectPasswordResource1.Text" xml:space="preserve">
+        <value>[fr] Incorrect old password</value>
+    </data>        
 </root>
