--- a/App_LocalResources/ChangePassword.aspx.ja.resx
+++ b/App_LocalResources/ChangePassword.aspx.ja.resx
@@ -144,4 +144,7 @@
     <data name="TEXT_SU_NOTE" xml:space="preserve">
         <value>&amp;lt;br /&amp;gt;&amp;lt;br /&amp;gt;&amp;lt;b&amp;gt;注意：&amp;lt;/b&amp;gt;  スーパー ユーザはさらに、マシンごとに ServerAccess の入力内容を変更して暗号化する必要があります。</value>
     </data>
+    <data name="lblIncorrectPasswordResource1.Text" xml:space="preserve">
+        <value>[ja] Incorrect old password</value>
+    </data>    
 </root>
