--- a/App_LocalResources/ChangePassword.aspx.pt-br.resx
+++ b/App_LocalResources/ChangePassword.aspx.pt-br.resx
@@ -143,4 +143,7 @@
     <data name="TEXT_SU_NOTE" xml:space="preserve">
         <value>&lt;br /&gt;&lt;br /&gt;&lt;b&gt;OBS.:&lt;/b&gt; Como um Super Usuário, você deve alterar a entrada no ServerAccess em cada máquina e criptografá-la.</value>
     </data>
+    <data name="lblIncorrectPasswordResource1.Text" xml:space="preserve">
+        <value>[pt-br] Incorrect old password</value>
+    </data>        
 </root>
